# learning-rust

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config
hello_macro/: Cargo.toml
hello_macro/hello_macro_derive/: Cargo.toml
hello_macro/hello_macro_derive/src/: lib.rs
hello_macro/src/: lib.rs
src/: lib.rs  main.rs  test.rs
src/auxiliary/src/: lib.rs
src/clocks-timers/: Cargo.toml
src/hello-world/: Cargo.toml
src/led-roulette/: Cargo.toml
src/registers/: Cargo.toml  disassembly.bat  registers-unsafe-read.disasm.txt
src/registers-hal/: Cargo.toml
src/registers-read/: Cargo.toml
src/registers-safe-manip/: Cargo.toml
src/registers-unsafe-read/: Cargo.toml  disassembly.bat  registers.disasm.txt
src/rust_book/: advanced_functions.rs  advanced_traits.rs  advanced_types.rs  box.rs  closures.rs  concurrency.rs  concurrency_channel.rs  concurrency_mutex.rs  control_flow_if.rs  control_flow_loop.rs  data_types_simple.rs  data_types_tuples.rs  enum_type.rs  error_handling.rs  functions.rs  generics.rs  guessing_game.rs  hash_map.rs  hello_world.rs  if_let.rs  iterator.rs  lifetime.rs  macros.rs  mod.rs  oop_encapsulation.rs  oop_inheritance.rs  ownership.rs  pattern_matching_destructuring.rs  pattern_matching_function.rs  pattern_matching_let.rs  pattern_matching_syntax.rs  refcell.rs  reference_counter.rs  reference_cycle.rs  references_borrowing.rs  restaurant.rs  slice_type.rs  smart_pointer.rs  string.rs  struct_type.rs  (+6 more)
src/rust_book/art/: mod.rs
src/usart/: Cargo.toml
src/usart/src/: main.rs
tests/: integration_test.rs
(+15 files in other folders)
