[package]
name = "rust_program"
version = "0.1.0"
authors = ["loggi"]
edition = "2018"

# See more keys and their definitk tions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.5.5"
hello_macro = { path = "hello_macro" }
hello_macro_derive = { path = "hello_macro/hello_macro_derive" }

[lib]
name = "rust_program"


[profile.dev]
opt-level =0

[profile.release]
opt-level = 3
