[package]
name = "usart"
version = "0.1.0"
authors = ["loggi <loggi.ain@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.3"
panic-halt = "0.2.0"
hal = {version="0.5.0", package="stm32f3xx-hal",features=["stm32f303xc", "rt"]}
[dependencies.heapless]
default-features = false
version = "0.3.7"